--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>myWebsite</title>
 </head>
 <body>
-    <h6>OPEN CONSOLE</h6>
     <script src="app.js"></script>
 </body>
 </html>
